--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,15 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "next": "13.2.1",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
     "sass": "^1.58.3",
     "typescript": "4.9.5"
   }
