--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "next": "13.2.1",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
