--- a/client/package.json
+++ b/client/package.json
@@ -25,5 +25,9 @@
     "react-redux": "^8.0.5",
     "sass": "^1.58.3",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "eslint-config-next": "13.2.4",
+    "eslint-config-prettier": "^8.8.0"
   }
 }
