--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.2",
     "sass": "^1.58.3",
     "typescript": "4.9.5"
   },
